[tool.poetry]
name = "mentorpunten"
version = "0.1.0"
description = ""
authors = ["Nick van Oers <nickvoers@gmail.com>, Lars van Rhijn <larsvanrhijn@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.2"

[tool.poetry.group.dev.dependencies]
pydocstyle = "^6.3.0"
flake8 = "^6.0.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
