[tool.poetry]
name = "mentorpunten"
version = "0.1.0"
description = ""
authors = ["Nick van Oers <nickvoers@gmail.com>, Lars van Rhijn <larsvanrhijn@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.10"
django-tinymce = "^3.6.1"
fontawesomefree = "^6.4.0"
django-bootstrap5 = "^23.3"
djangorestframework = "^3.14.0"
django-oauth-toolkit = "^2.3.0"
django-import-export = "^3.2.0"
django-admin-autocomplete-filter = "^0.7.1"
django-cors-headers = "^4.1.0"
django-autocompletefilter = "^0.0.8"
django-filter = "^23.2"
django-admin-rangefilter = "^0.10.0"
bleach = { extras = ["css"], version = "^5.0.1" }
requests-oauthlib = "^1.3.1"
pillow = "^10.2.0"
uritemplate = "^4.1.1"
drf-spectacular = "^0.26.4"
django-queryable-properties = "^1.8.4"
uwsgi = "^2.0.22"
psycopg2-binary = "^2.9.6"
django-storages = "^1.13.2"
boto3 = "^1.28.21"
django-cron = "^0.6.0"

[tool.poetry.group.dev.dependencies]
pydocstyle = "^6.3.0"
flake8 = "^6.0.0"
black = "^23.3.0"
coverage = "^7.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
